--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,8 +16,16 @@ builds:
       - CGO_ENABLED=1
     goos:
       - linux
-      - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
+  - env:
+      - CGO_ENABLED=0
+    goos:
+      - windows
     goarch:
       - amd64
       - arm64
