Update .goreleaser.yaml to include environment variables for snapcraft configuration
- Added environment variables SNAP, SNAP_NAME, and SNAP_VERSION to the snapcraft section for improved build configuration.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -61,6 +61,10 @@ snapcrafts:
     confinement: strict
     license: MIT
     base: core20
+    environment:
+      snap: SNAP="/snap/snapcraft/15950"
+      SNAP_NAME: "snapcraft"
+      SNAP_VERSION: "15950"
     apps:
       snip:
         command: snip
