Update .goreleaser.yaml to streamline snapcraft configuration
- Added environment variables for SNAP, SNAP_NAME, and SNAP_VERSION to enhance build setup.
- Included a chmod command in the before hooks to ensure proper permissions for the dist directory.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,9 +7,15 @@ version: 2
 
 project_name: snip
 
+env:
+  - SNAP="/snap/snapcraft/15950"
+  - SNAP_NAME="snapcraft"
+  - SNAP_VERSION="15950"
+
 before:
   hooks:  
     - go mod tidy
+    - chmod -R u+rwx dist || true
 
 builds:
   - env:
@@ -61,10 +67,6 @@ snapcrafts:
     confinement: strict
     license: MIT
     base: core20
-    environment:
-      snap: SNAP="/snap/snapcraft/15950"
-      SNAP_NAME: "snapcraft"
-      SNAP_VERSION: "15950"
     apps:
       snip:
         command: snip
