Update package identifier in .goreleaser.yaml for Winget configuration

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -81,7 +81,7 @@ winget:
     license: "MIT"
     publisher_url: "https://github.com/matheuzgomes/Snip"
     publisher_support_url: "https://github.com/matheuzgomes/Snip/issues/new"
-    package_identifier: "Marinho.Snip"
+    package_identifier: "snip"
     homepage: "https://github.com/matheuzgomes/Snip"
     description: "Snip is a terminal-based note management application that allows you to create, edit, view, and delete notes quickly and efficiently."
     license_url: "https://github.com/matheuzgomes/Snip/blob/master/LICENSE"
