--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -76,12 +76,12 @@ homebrew_casks:
 
 winget:
   - name: snip
-    publisher: "Marinho"
+    publisher: "Notes"
     short_description: "A fast and lightweight note-taking CLI application"
     license: "MIT"
     publisher_url: "https://github.com/matheuzgomes/Snip"
     publisher_support_url: "https://github.com/matheuzgomes/Snip/issues/new"
-    package_identifier: "snip-notes"
+    package_identifier: "Notes.Snip"
     homepage: "https://github.com/matheuzgomes/Snip"
     description: "Snip is a terminal-based note management application that allows you to create, edit, view, and delete notes quickly and efficiently."
     license_url: "https://github.com/matheuzgomes/Snip/blob/master/LICENSE"
