Update .goreleaser.yaml to enable CGO and specify Windows cross-compiler

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,12 +29,12 @@ builds:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
   - id: snip-windows
     env:
-      - CGO_ENABLED=0
+      - CGO_ENABLED=1
+      - CC=x86_64-w64-mingw32-gcc
     goos:
       - windows
     goarch:
       - amd64
-      - arm64
     ldflags:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
 
