Update homebrew cask name to 'snip-notes' in .goreleaser.yaml and README.md for installation instructions

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -60,7 +60,7 @@ changelog:
 
 
 homebrew_casks:
-  - name: snip
+  - name: snip-notes
     binary: snip
     url:
       template: "https://github.com/matheuzgomes/Snip/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
