--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           go-version: '1.25'
 
+      - name: Install GoReleaser
+        run: |
+          curl -sL https://git.io/goreleaser | bash -s -- -b $GITHUB_WORKSPACE v1.25.0
+
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --clean
+        run: ./goreleaser release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
