--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -61,6 +61,7 @@ archives:
     format_overrides:
       - goos: windows
         formats: [zip]
+    skip: "{{if and (eq .Os \"windows\") (ne .Env.RUNNER_OS \"Windows\")}}true{{end}}"
 
 changelog:
   sort: asc
@@ -84,6 +85,7 @@ homebrew_casks:
     caveats: |
       Data files are stored in ~/.snip/
       To completely remove all data, run: rm -rf ~/.snip/
+    skip: "{{if ne .Env.RUNNER_OS \"macOS\"}}true{{end}}"
 
 winget:
   - name: snip
@@ -105,6 +107,7 @@ winget:
       owner: matheuzgomes
       name: Snip
       branch: master
+    skip: "{{if ne .Env.RUNNER_OS \"Windows\"}}true{{end}}"
 
 scoops:
   - name: snip
@@ -118,6 +121,7 @@ scoops:
       owner: matheuzgomes
       name: Snip
       branch: master
+    skip: "{{if ne .Env.RUNNER_OS \"Windows\"}}true{{end}}"
 
 
 release:
