Enhance release workflow by adding a setup job for GoReleaser, downloading the binary, and making it executable for Linux, Windows, and macOS builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,25 @@ on:
       - 'v*'
 
 jobs:
+  setup-goreleaser:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.25'
+
+      - name: Install GoReleaser
+        run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
+
+      - name: Upload GoReleaser binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: goreleaser-binary
+          path: ~/go/bin/goreleaser
+          retention-days: 1
   goreleaser-linux:
+    needs: setup-goreleaser
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -14,20 +32,21 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Download GoReleaser binary
+        uses: actions/download-artifact@v4
         with:
-          go-version: '1.25'
+          name: goreleaser-binary
 
-      - name: Install GoReleaser
-        run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
+      - name: Make GoReleaser executable
+        run: chmod +x goreleaser
 
       - name: Run GoReleaser (Linux only)
-        run: goreleaser release --clean --skip=publish --config=.goreleaser-linux.yaml
+        run: ./goreleaser release --clean --skip=publish --config=.goreleaser-linux.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   goreleaser-windows:
+    needs: setup-goreleaser
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -35,20 +54,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Download GoReleaser binary
+        uses: actions/download-artifact@v4
         with:
-          go-version: '1.25'
-
-      - name: Install GoReleaser
-        run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
+          name: goreleaser-binary
 
       - name: Run GoReleaser (Windows only)
-        run: goreleaser release --clean --skip=publish --config=.goreleaser-windows.yaml
+        run: .\goreleaser.exe release --clean --skip=publish --config=.goreleaser-windows.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   goreleaser-macos:
+    needs: setup-goreleaser
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -56,16 +73,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Download GoReleaser binary
+        uses: actions/download-artifact@v4
         with:
-          go-version: '1.25'
+          name: goreleaser-binary
 
-      - name: Install GoReleaser
-        run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
+      - name: Make GoReleaser executable
+        run: chmod +x goreleaser
 
       - name: Run GoReleaser (macOS only)
-        run: goreleaser release --clean --skip=publish --config=.goreleaser-darwin.yaml
+        run: ./goreleaser release --clean --skip=publish --config=.goreleaser-darwin.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -78,15 +95,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Download GoReleaser binary
+        uses: actions/download-artifact@v4
         with:
-          go-version: '1.25'
+          name: goreleaser-binary
 
-      - name: Install GoReleaser
-        run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
+      - name: Make GoReleaser executable
+        run: chmod +x goreleaser
 
       - name: Publish Release
-        run: goreleaser release --clean --skip=archive,checksums,homebrew,winget,scoop
+        run: ./goreleaser release --clean --skip=archive,homebrew,winget,scoop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
