--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
           name: goreleaser-binary
 
       - name: Run GoReleaser (Windows only)
-        run: .\goreleaser.exe release --clean --skip=publish --config=.goreleaser-windows.yaml
+        run: goreleaser release --clean --skip=publish --config=.goreleaser-windows.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
