--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
 
       - name: Run GoReleaser (Linux only)
-        run: goreleaser release --clean --skip=publish --config=.goreleaser-linux.yaml
+        run: goreleaser release --clean --config=.goreleaser-linux.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -44,7 +44,7 @@ jobs:
         run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
 
       - name: Run GoReleaser (Windows only)
-        run: goreleaser release --clean --skip=publish --config=.goreleaser-windows.yaml
+        run: goreleaser release --clean --config=.goreleaser-windows.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -65,28 +65,6 @@ jobs:
         run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
 
       - name: Run GoReleaser (macOS only)
-        run: goreleaser release --clean --skip=publish --config=.goreleaser-darwin.yaml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  publish:
-    needs: [goreleaser-linux, goreleaser-windows, goreleaser-macos]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.25'
-
-      - name: Install GoReleaser
-        run: go install github.com/goreleaser/goreleaser/v2@v2.11.1
-
-      - name: Publish Release
-        run: goreleaser release --clean --skip=archive,homebrew,winget,scoop
+        run: goreleaser release --clean --config=.goreleaser-darwin.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
