Add checksum configuration for macOS, Linux, and Windows in GoReleaser YAML files

--- a/.goreleaser-darwin.yaml
+++ b/.goreleaser-darwin.yaml
@@ -33,6 +33,9 @@ archives:
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
 
+checksum:
+  name_template: 'snip_{{ .Version }}_checksums_darwin.txt'
+
 changelog:
   sort: asc
   filters:
