--- a/.goreleaser-linux.yaml
+++ b/.goreleaser-linux.yaml
@@ -32,6 +32,9 @@ archives:
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
 
+checksum:
+  name_template: 'snip_{{ .Version }}_checksums_linux.txt'
+
 changelog:
   sort: asc
   filters:
