Add Homebrew Cask configuration for Snip in GoReleaser YAML

--- a/.goreleaser-darwin.yaml
+++ b/.goreleaser-darwin.yaml
@@ -43,6 +43,21 @@ changelog:
       - "^docs:"
       - "^test:"
 
+homebrew_casks:
+  - name: snip-notes
+    binary: snip
+    url:
+      template: "https://github.com/matheuzgomes/Snip/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    homepage: "https://github.com/matheuzgomes/Snip"
+    description: "A fast and lightweight note-taking CLI application"
+    repository:
+      owner: matheuzgomes
+      name: homebrew-Snip
+      branch: main
+    caveats: |
+      Data files are stored in ~/.snip/
+      To completely remove all data, run: rm -rf ~/.snip/
+
 release:
   footer: >-
 
