Remove SNAP environment variables from GoReleaser YAML files and add Scoops configuration for Windows release.

--- a/.goreleaser-windows.yaml
+++ b/.goreleaser-windows.yaml
@@ -2,11 +2,6 @@ version: 2
 
 project_name: snip
 
-env:
-  - SNAP="/snap/snapcraft/15950"
-  - SNAP_NAME="snapcraft"
-  - SNAP_VERSION="15950"
-
 before:
   hooks:  
     - go mod tidy
@@ -41,6 +36,19 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+
+scoops:
+  - name: snip
+    url_template: "https://github.com/matheuzgomes/Snip/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    homepage: "https://github.com/matheuzgomes/Snip"
+    description: "A fast and lightweight note-taking CLI application"
+    license: "MIT"
+    persist:
+      - ".snip"
+    repository:
+      owner: matheuzgomes
+      name: Snip
+      branch: master
 
 release:
   footer: >-
