--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Run GoReleaser (Windows only)
         run: goreleaser release --clean --config=.goreleaser-windows.yaml
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
 
   goreleaser-macos:
     runs-on: macos-latest
