--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,22 @@ permissions:
   contents: write
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.25'
+
+      - name: Run Tests
+        run: make test
+
   goreleaser-linux:
     runs-on: ubuntu-latest
     steps:
